# units

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  404.html  DESCRIPTION  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  cleanup  confdefs.h  configure  configure.ac  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  units.Rproj
.github/workflows/: R-CMD-check.yaml  build.yml  main.yml  pkgdown.yml  quantities.yml  test-coverage.yaml
R/: RcppExports.R  arith.R  conversion.R  convert_units.R  database.R  defunct.R  depracated.R  deprecated.R  helpers.R  init.R  make_units.R  math.R  misc.R  mixed.R  options.R  plot.R  scale_units.R  set_units.R  summaries.R  symbolic_units.R  sysdata.rda  tidyverse.R  ud_units.R  udunits.R  units_data.R  user_conversion.R  valid_udunits.R
articles/: index.html  index.md  measurement_units_in_R.html  measurement_units_in_R.md  units.html  units.md
data/: ud_units.rda
demo/: 00Index  cf.R  ggforce.R  ggplot2.R  year.R
docs/: authors.html  index.html  pkgdown.yml
docs/articles/: index.html  measurement_units_in_R.Rnw  measurement_units_in_R.aux  measurement_units_in_R.bbl  measurement_units_in_R.bib  measurement_units_in_R.blg  measurement_units_in_R.brf  measurement_units_in_R.html  measurement_units_in_R.out  measurement_units_in_R.tex  units.html
docs/news/: index.html
docs/reference/: Math.units.html  Ops.units.html  as.dt.html  as.units.difftime.html  as.units.html  as_cf.html  as_difftime.html  as_units.html  boxplot.units.html  deparse_unit.html  deprecated.html  drop_units.html  hist.units.html  index.html  install_conversion_constant.html  install_conversion_function.html  install_symbolic_unit.html  make_unit.html  matmult.html  mixed_units.html  parse_unit.html  plot.units.html  seq.units.html  set_units.html  tibble.html  type_sum.units.html  ud_units.html  unitless.html  units-set-.numeric.html  units.html  units.units.html  units_options.html  valid_udunits.html
inst/: CITATION
inst/include/: units.h  units.h.in
inst/share/udunits/: udunits2-common.xml
man/: Math.units.Rd  Ops.units.Rd  adapt_units.Rd  as.dt.Rd  as.hms.units.Rd  as.units.Rd  as.units.difftime.Rd  as_cf.Rd  as_difftime.Rd  as_units.Rd  boxplot.units.Rd  cbind.units.Rd  convert_to_base.Rd  convert_units.Rd  deparse_unit.Rd  deprecated.Rd  drop_units.Rd  grapes-times-grapes.Rd  hist.units.Rd  install_conversion_constant.Rd  install_conversion_function.Rd  install_symbolic_unit.Rd  install_unit.Rd  keep_units.Rd  load_units_xml.Rd  make_unit.Rd  make_units.Rd  matmult.Rd  matrixOps.units.Rd  mixed_units.Rd  parse_unit.Rd  plot.units.Rd  plus.Rd  quantile.Rd  scale_units.Rd  seq.units.Rd  set_units.Rd  tibble.Rd  type_sum.units.Rd  ud_are_convertible.Rd  (+13 more)
news/: index.html  index.md
reference/: Math.units.html  Math.units.md  Ops.units.html  Ops.units.md  as_difftime.html  as_difftime.md  as_units.html  boxplot.units.html  boxplot.units.md  cbind.units.html  cbind.units.md  convert_to_base.html  convert_to_base.md  deparse_unit.html  deparse_unit.md  deprecated.html  drop_units.html  drop_units.md  hist.units.html  hist.units.md  index.html  index.md  install_conversion_constant.html  install_symbolic_unit.html  install_unit.html  install_unit.md  keep_units.html  keep_units.md  load_units_xml.html  load_units_xml.md  matrixOps.units.html  matrixOps.units.md  mixed_units.html  mixed_units.md  plot.units.html  plot.units.md  scale_units.html  scale_units.md  seq.units.html  seq.units.md  (+16 more)
revdep/: Dockerfile  README.md  bootstrap.R  cran.md  docker-compose.yml  failures.md  problems.md  run.sh
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.win  RcppExports.cpp  io.c  io.h  tokenizer.cpp  udunits.cpp  units.h  units_types.h
tests/: plot.R  set_units.R  set_units.Rout.save  testthat.R
tests/testthat/: test_arith.R  test_conversion.R  test_convert_units.R  test_helpers.R  test_math.R  test_misc.R  test_mixed.R  test_plot.R  test_summaries.R  test_symbolic_units.R  test_tidyverse.R  test_time.R  test_ud_convert.R  test_udunits.R  test_unit_creation.R  test_user_conversion.R  test_valid_udunits.R
tests/testthat/_snaps/: misc.md  tidyverse.md
tools/: winlibs.R
vignettes/: 647_Global_Temperature_Data_File.txt  measurement_units_in_R.Rmd  measurement_units_in_R.Rnw  measurement_units_in_R.bib  measurement_units_in_R.html  units.Rmd
